[project]
name = "omuproject"
version = "0.0.0"
description = "Add your description here"
authors = [
    { name = "am230", email = "111672334+am230@users.noreply.github.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11.5"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
managed = true
pip.universal = true

[dependency-groups]
dev = [
    "loguru>=0.7.2",
    "ruff>=0.1.6",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0.0",
    "pyright>=1.1.397",
    "tomlkit>=0.13.2",
    "pypiserver[passlib]>=2.4.0",

    "omu",
    "omu-chatprovider",
    "omu-chat",
    "omu-chat-twitch",
    "omu-chat-youtube",
    "omuplugin_obs",
    "omuserver",
]

[tool.uv.workspace]
members = ["packages-py/*"]

[tool.uv.sources]
omu = { workspace = true }
omu-chatprovider = { workspace = true }
omu-chat = { workspace = true }
omu-chat-twitch = { workspace = true }
omu-chat-youtube = { workspace = true }
omuplugin_obs = { workspace = true }
omuserver = { workspace = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/omuproject"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
exclude = ["packages-py/plugin-obs/src/obspython.pyi"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pylint]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
]

[tool.pyright]
include = ["packages-py/*"]
