[package]
name = "omuapps"
version = "0.1.0"
description = "A OMUAPPS client built with Tauri."
authors = ["2ji_han"]
license = ""
repository = ""
default-run = "omuapps"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = ["devtools", "tray-icon", "unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pep440_rs = "0.4.0"
anyhow = { version = "1.0.70", features = ["backtrace"] }
curl = { version = "0.4.44", features = ["ssl", "static-curl", "static-ssl"] }
directories = "5.0.1"
once_cell = "1.19.0"
tempfile = "3.10.1"
sha2 = "0.10.8"
hex = "0.4.3"
rand = "0.8.5"
tauri-plugin-window-state = { version = "2.4.1" }
tauri-plugin-single-instance = { version = "2.3.6" }
tauri-plugin-log = "2.7.1"
tauri-plugin-cli = { version = "2.4.1" }
zstd = "0.13.0"
flate2 = "1.0.25"
bzip2 = "0.4.4"
zip = { version = "0.6.5", features = ["deflate"], default-features = false }
tar = "0.4.38"
log = "0.4.22"
open = "5.3.0"
walkdir = "2.5.0"
tauri-plugin-process = "2.3.1"
chrono = "0.4.31"
tauri-plugin-fs = "2.4.4"
tauri-plugin-opener = "2.5.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.4.1"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-updater = "2.9.0"
tauri-plugin-window-state = "2.4.1"
